compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__binops__int_divide_with_possible_side_effect_as_argument.snap
---
source: compiler-core/src/erlang/tests/binops.rs
expression: "pub fn main(wibble, a, b) { wibble(a() / b) }"
---
----- SOURCE CODE
pub fn main(wibble, a, b) { wibble(a() / b) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/3]).

-spec main(fun((integer()) -> N), fun(() -> integer()), integer()) -> N.
main(Wibble, A, B) ->
    Wibble(begin
        _value = A(),
        case B of
            0 ->
                0;

            _value@1 ->
                _value div _value@1
        end
    end).
