compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__binops__int_mult.snap
---
source: compiler-core/src/erlang/tests/binops.rs
expression: "pub fn main() { 1 * 2 }"
---
----- SOURCE CODE
pub fn main() { 1 * 2 }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> integer().
main() ->
    1 * 2.
