compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__binops__int_remainder_by_zero.snap
---
source: compiler-core/src/erlang/tests/binops.rs
expression: "pub fn main(a) { a % 0 }"
---
----- SOURCE CODE
pub fn main(a) { a % 0 }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1]).

-spec main(integer()) -> integer().
main(A) ->
    0.
