compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__binops__int_remainder_with_possible_side_effect.snap
---
source: compiler-core/src/erlang/tests/binops.rs
expression: "pub fn main(a, b) { a() % b }"
---
----- SOURCE CODE
pub fn main(a, b) { a() % b }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/2]).

-spec main(fun(() -> integer()), integer()) -> integer().
main(A, B) ->
    _value = A(),
    case B of
        0 ->
            0;

        _value@1 ->
            _value rem _value@1
    end.
